// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`布局Column快照测试 栅格布局 1`] = `
<div
  className="sc-AxjAm dIKvAz sinoui-row"
>
  <div
    className="sc-AxirZ fyycv sinoui-column"
  >
    列
  </div>
</div>
`;

exports[`布局Column快照测试 默认 1`] = `
<div
  className="sc-AxjAm dIKvAz sinoui-row"
>
  <div
    className="sc-AxirZ gTPIsR sinoui-column"
  >
    列
  </div>
</div>
`;
